linked hangman and rpg game to portfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -29,13 +29,13 @@
     <hr>
    <div class="flex-container">
     <div class="box-left">
-        <img id="gallery-image-1" src="http://lorempixel.com/output/technics-q-c-250-180-1.jpg" alt="gallery-image-1">
+       <a href= "https://nbardoi.github.io/Word-Guess-Game/"> <img id="gallery-image-1" src="http://lorempixel.com/output/technics-q-c-250-180-1.jpg" alt="gallery-image-1"> </a>
         <div class="text-left">
             <p>Hangman</p>
         </div>
     </div>
     <div class="box-right">
-        <img id="gallery-image-2" src="http://lorempixel.com/output/technics-q-c-250-180-2.jpg" alt="gallery-image-2" />
+        <a href= "https://nbardoi.github.io/unit-4-game/"> <img id="gallery-image-2" src="http://lorempixel.com/output/technics-q-c-250-180-2.jpg" alt="gallery-image-2" /> </a>
         <div class="text-right">
             <p>RPG Game</p>
         </div>
