linked trivia game

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,7 +41,7 @@
         </div>
     </div>
     <div class="box-left">
-        <img id="gallery-image-3" src="http://lorempixel.com/output/technics-q-c-250-180-5.jpg" alt="gallery-image-3" />
+        <img href="https://nbardoi.github.io/TriviaGame/" id="gallery-image-3" src="http://lorempixel.com/output/technics-q-c-250-180-5.jpg" alt="gallery-image-3" />
         <div class="text-left">
             <p>Trivia Game</p>
         </div>
