--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,19 +41,19 @@
         </div>
     </div>
     <div class="box-left">
-        <a href="https://nbardoi.github.io/TriviaGame/"> <img id="gallery-image-3" src="http://lorempixel.com/output/technics-q-c-250-180-5.jpg" alt="gallery-image-3" /> </a>
+        <a href= "https://nbardoi.github.io/TriviaGame/"> <img id="gallery-image-3" src="http://lorempixel.com/output/technics-q-c-250-180-5.jpg" alt="gallery-image-3" /> </a>
         <div class="text-left">
             <p>Trivia Game</p>
         </div>
     </div>
     <div class="box-right">
-        <img id="gallery-image-4" src="http://lorempixel.com/output/technics-q-c-250-180-4.jpg" alt="gallery-image-4" /> 
+        <a href= # > <img id="gallery-image-4" src="http://lorempixel.com/output/technics-q-c-250-180-4.jpg" alt="gallery-image-4" /> </a>
         <div class="text-right">
             <p>Rutgers Info Widget</p>
         </div>
     </div>
     <div class="box-left">
-        <img id="gallery-image-5" src="http://lorempixel.com/output/technics-q-c-250-180-6.jpg" alt="gallery-image-5" /> 
+        <a href= # > <img id="gallery-image-5" src="http://lorempixel.com/output/technics-q-c-250-180-6.jpg" alt="gallery-image-5" /> </a>
         <div class="text-left">
             <p>Rock Paper Scissors</p>
         </div>
