--- a/Portfolio.html
+++ b/Portfolio.html
@@ -47,9 +47,9 @@
         </div>
     </div>
     <div class="box-right">
-        <a href= # > <img id="gallery-image-4" src="http://lorempixel.com/output/technics-q-c-250-180-4.jpg" alt="gallery-image-4" /> </a>
+        <a href= "https://nbardoi.github.io/GifTastic/" > <img id="gallery-image-4" src="http://lorempixel.com/output/technics-q-c-250-180-4.jpg" alt="gallery-image-4" /> </a>
         <div class="text-right">
-            <p>Rutgers Info Widget</p>
+            <p>GifTastic</p>
         </div>
     </div>
     <div class="box-left">
