--- a/Portfolio.html
+++ b/Portfolio.html
@@ -58,6 +58,12 @@
             <p>Train Scheduler</p>
         </div>
     </div>
+       <div class="box-right">
+        <a href= "https://nbardoi.github.io/GifTastic/" > <img id="gallery-image-4" src="http://lorempixel.com/output/technics-q-c-250-180-4.jpg" alt="gallery-image-4" /> </a>
+        <div class="text-right">
+            <p>Fest & Feast (Project 1)</p>
+        </div>
+    </div>
 </div>   
 </section>
 
